--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,12 +44,14 @@
     "@babel/register": "^7.10.3",
     "@babel/runtime": "^7.10.3",
     "@babel/runtime-corejs3": "^7.10.3",
+    "@supercharge/promise-pool": "^2.3.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-plugin-react-require": "^3.1.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "cheerio": "^1.0.0-rc.3",
     "css-loader": "^3.6.0",
+    "debug": "^4.3.4",
     "fs-extra": "^9.0.1",
     "http-proxy-middleware": "^1.0.4",
     "lodash.escaperegexp": "^4.1.2",
@@ -57,6 +59,7 @@
     "memory-fs": "^0.5.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "p-limit": "^4.0.0",
     "recursive-readdir": "^2.2.2",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
